# ilcli

./: .buildinfo  .gitignore  CONTRIBUTING.md  Makefile  README.md  coding-standards.html  genindex.html  ilcli.html  index.html  modules.html  objects.inv  py-modindex.html  quick-start.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: coding-standards.doctree  environment.pickle  ilcli.doctree  index.doctree  modules.doctree  quick-start.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-test.yml
_modules/: index.html
_modules/ilcli/: actions.html  args.html  command.html
_sources/: ilcli.rst.txt  index.rst.txt  modules.rst.txt
_static/: coding-standards.html  genindex.html  ilcli.html  index.html  modules.html  objects.inv  py-modindex.html  quick-start.html  search.html
_static/_modules/: index.html
_static/_modules/ilcli/: actions.html  args.html  command.html
_static/_sources/: coding-standards.rst.txt  quick-start.rst.txt
doc-source/: Makefile  conf.py
doc-source/examples/: args_conflict_subcommands.py  args_extra_opts_validation.py  args_opts.py  args_opts_validation.py  args_subcommands.py  doc.py  minimal.py  not_inherit_args.py  removing_arguments.py
ilcli/: __init__.py  actions.py  args.py  command.py
test/: helpers.py  test_mycmd.py  test_out_err.py
