[metadata]
name = ilcli
version = attr: ilcli.__version__
description = i like command-line interfaces
author = Cloudant Infrastructure
author_email = cloudant-infrateam@wwpdl.vnet.ibm.com
url = https://github.com/cloudant/ilcli
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

long_description = https://pages.github.com/cloudant/ilcli

[options]
packages = find:

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    bandit>=1.5.0
    Sphinx>=1.7.2
    sphinxcontrib-programoutput>=0.11
    flake8>=3.5.0
    flake8-import-order>=0.0.11
    setuptools
    wheel
    twine
